retweet not finished